# calculator

./: CMakeLists.txt  README.md  compare.c  compare.h  convert.c  convert.h  division.c  division.h  main.c  modulo.c  modulo.h  mutliplication.c  mutliplication.h  power.c  power.h  readinfile.c  readinfile.h  subtract.c  subtract.h  sum.c  sum.h  turntointchar.c  turntointchar.h
example_input_files/: 00_in.txt  01_in.txt  02_in.txt  03_in.txt
